# gene-extractor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  extract.rs  main.rs  utils.rs
tests/: test.rs
