[package]
name = "gene-extractor"
version = "0.1.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Extract multiple genes in genomic contigs using reference fasta file"
readme = "README.md"
repository = "https://github.com/hhandika/gene-extractor"
homepage = "https://github.com/hhandika/gene-extractor"
keywords = ["cli", "utility", "phylogenetics", "genomics", "phylogenomics"]
categories = ["command-line-utilities", "science"]

[dependencies]
ansi_term = "0.*"
clap = "2.33.*"
log = "0.*"
chrono = "0.4.*"
num_cpus = "1.13.*"
rayon = "1.*"
sysinfo = "0.21.1"
log4rs = "1.*"
glob = "*"
indicatif = "0.*"

[profile.release]
panic = "abort"

[[bin]]
name = "genx"
path = "src/main.rs"